1.迁移到AndroidX 2.sdk切换到安卓14 3.gradle升级到8.3 3.最新版AS文件结构 4.配置buildFeatures{aidl = true} 5.manifest加入android:exported="true" 6.加上 namespace 声明 7.升级到java8语法 8.加入权限声明 <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" /> 9.大于安卓9.0后使用蓝牙，必须拥有位置权限 10.可以自由开关日志输出 BluetoothLog.isShowLog = false;

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,12 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
-    buildFeatures {
-        aidl = true
+    //打包
+    android.applicationVariants.all { variant ->
+        def createDate = new Date().format("yyMMdd_HHmm", TimeZone.getTimeZone("GMT+08:00"))
+        variant.outputs.all {
+            it.outputFileName = "BLE_v${versionName}_${versionCode}_${createDate}_${variant.buildType.name}.apk"
+        }
     }
 }
 dependencies {
