--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,14 @@ android {
             it.outputFileName = "BLE_v${versionName}_${versionCode}_${createDate}_${variant.buildType.name}.apk"
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
 }
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation project(path: ':library')
 }
